Create renderProjects function

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
     <title>To-Do App</title>
 </head>
 <body>
-    <header class="header">
+    <header id="header">
         <div>To-Do App</div>
     </header>
-    <aside class="sidebar">
-        sidebar
+    <aside id="sidebar">
+        <div>Projects</div>
+        <div id="projects-container"></div>
     </aside>
-    <main class="main">
+    <main id="main">
         main
     </main>
 </body>
