Create renderTodo() function

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div id="projects-container"></div>
     </aside>
     <main id="main">
-        main
+        <div id="todo-container"></div>
     </main>
 </body>
 </html>
