--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         <div id="projects-container"></div>
     </aside>
     <main id="main">
+        <h2 id="todo-container-header"></h2>
         <div id="todo-container"></div>
     </main>
 </body>
