--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,15 @@
         <h2 id="todo-container-header"></h2>
         <div id="todo-container"></div>
     </main>
+    <!-- modal pop-up for to-do, hidden unless user presses on Details button -->
+    <div id="todo-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2 id="modal-title"></h2>
+            <p id="modal-description"></p>
+            <p id="modal-dueDate"></p>
+            <p id="modal-priority"></p>
+        </div>
+    </div>
 </body>
 </html>
