--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,15 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2 id="modal-title"></h2>
-            <p id="modal-description"></p>
-            <p id="modal-dueDate"></p>
-            <p id="modal-priority"></p>
+            <span id="modal-joint-container">
+                    <span>Description: </span>
+                    <span>Due date: </span>
+                    <span>Priority: </span>
+                    <span id="modal-description"></span>
+                    <span id="modal-due-date"></span>
+                    <span id="modal-priority"></span>
+
+            </span>
         </div>
     </div>
 </body>
