--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <header id="header">
-        <div>To-Do App</div>
+        <div class="text-large">To-Do App</div>
     </header>
     <aside id="sidebar">
-        <div>Projects</div>
-        <div id="projects-container"></div>
+        <div id="nav-grid">
+            <div class="text-large">Projects</div>
+            <div id="projects-container"></div>
+        </div>
     </aside>
     <main id="main">
         <h2 id="todo-container-header"></h2>
