--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
     <aside id="sidebar">
         <div id="nav-grid">
             <div class="text-large">Projects</div>
-            <nav id="projects-container"></nav>
+            <nav id="projects-container">
+            </nav>
         </div>
     </aside>
     <main id="main">
